--- a/index.less
+++ b/index.less
@@ -1,12 +1,4 @@
-@gray-1: #AFAFAF;
-@gray-2: #898989;
-@gray-3: #f1f1f1;
-@gray-4: #EBEBEB;
-
-// teal indicates an add
-@added: #009688;
-// indigo indicates a change
-@changed: #3F51B5;
+@import "styles/colors.less";
 
 atom-text-editor .cursor {
   // Color of the writing cursor
@@ -103,19 +95,48 @@ atom-text-editor .line-number {
   background: transparent;
 }
 
-.status-added {
+.status-added > span,
+.status-added > .header > span {
   // Color when staged for add
   color: @added;
 }
 
-.status-modified {
+atom-text-editor .gutter .line-number.git-line-added {
+  border-left-color: @added;
+}
+
+.status-added {
+  // Override highlighting whole folder when only one file changed.
+  color: inherit;
+}
+
+.status-modified > span,
+.status-modified > .header > span {
   // Color when staged for modification
   color: @changed;
+}
+
+atom-text-editor .gutter .line-number.git-line-modified {
+  border-left-color: @changed;
+}
+
+.status-modified {
+  color: inherit;
 }
 
 .status-ignored {
   // Files ignored in .gitignore
   color: @gray-1;
+}
+
+atom-text-editor .gutter .line-number.git-line-removed:before, atom-text-editor .gutter .line-number.git-previous-line-removed:before {
+  // Indicator when lines were removed
+  border-left-color: @removed;
+}
+
+atom-text-editor .gutter:not(.git-diff-icon) .line-number.git-line-removed::after {
+  // Indicator when lines were removed
+  border-bottom-color: @removed;
 }
 
 atom-text-editor .gutter .line-number.cursor-line {
@@ -148,6 +169,7 @@ atom-text-editor .gutter .line-number.cursor-line {
 
 .tab-bar .tab.modified:not(:hover) .close-icon {
   border: 2px solid @gray-2;
+  top: 13px;
 }
 
 .tooltip {
