--- a/styles/colors.less
+++ b/styles/colors.less
@@ -2,10 +2,13 @@
 @gray-2: #898989;
 @gray-3: #f1f1f1;
 @gray-4: #EBEBEB;
+@gray-5: #eaeaea;
 
 // teal indicates an add
 @added: #009688;
 // indigo indicates a change
-@changed: #3F51B5;
+@changed: #001ec3;
 // pink to indicate remove
 @removed: #E91E63;
+// black for regular text
+@black: #000000;
