--- a/index.less
+++ b/index.less
@@ -132,7 +132,7 @@ atom-text-editor .gutter .line-number.git-line-modified {
 
 .status-ignored {
   // Files ignored in .gitignore
-  color: @gray-1;
+  color: @gray-1!important;
 }
 
 atom-text-editor .gutter .line-number.git-line-removed:before, atom-text-editor .gutter .line-number.git-previous-line-removed:before {
